# PixelHub

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  config.example.toml  go.mod  go.sum  mcp-config.example.json
.cursor/rules/: api.mdc  background.mdc  config.mdc  database.mdc  llm.mdc  project.mdc  storage.mdc
cmd/server/: main.go
docs/: API.md  ARCHITECTURE.md
internal/config/: config.go
internal/database/: db.go  models.go
internal/handlers/: handler.go
internal/llm/: doubao.go  interface.go  processor.go  prompt.go
internal/storage/: storage.go  tencent_cos.go
mcp/: .gitignore  PROJECT_SUMMARY.md  README.md  USAGE.md  example_config.json  pyproject.toml  run_example.py
mcp/src/mcp_server_pixelhub/: main.py
mcp/src/mcp_server_pixelhub/common/: client.py  config.py  errors.py  logs.py
mcp/src/mcp_server_pixelhub/tools/: __init__.py  images.py  tags.py
scripts/: docker-build.sh  init.sh
web/: index.html
web/static/css/: style.css
web/static/js/: app.js
